ir menu custom width set to 110% to avoid wrapping

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -93,6 +93,12 @@ body {
         font-size:16px;
       }
     }
+    // investor relation menu - col3 custom width
+    .footer-ir{
+      @media(min-width: 1199px){
+        width: 110%;
+      }
+    }
   }
   &.fr,
   &.ja {
